manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: playground-app
  namespace: dev
spec:
  selector:
    app: playground-app
  ports:
  - port: 8888
    targetPort: 8888
